--- a/src/styles.css
+++ b/src/styles.css
@@ -1,38 +1,48 @@
 * {
     box-sizing: border-box;
 }
+
 .nav {
     background-color: #333;
-     color: white;
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     gap: 2rem;
-     padding: 0 1rem;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+    padding: 0 1rem;
 }
 
 .nav a {
-     color: inherit;
+    color: inherit;
 
- }
+}
 
 body {
-     margin: 0;
- }
+    margin: 0;
+}
 
 .Guacamole {
     font-size: 2rem;
 }
 
- .nav ul {
+.nav ul {
     padding: 0;
     margin: 0;
     list-style: none;
     display: flex;
     gap: 1rem;
- }
+}
 
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 
-
-
-
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+}
